# middle-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
sprint1/: CMakeLists.txt  draft.cpp
sprint1/app_matrix/: CMakeLists.txt
sprint1/app_matrix/src/: main.cpp
sprint1/app_scope_guard/: CMakeLists.txt
sprint1/app_scope_guard/src/: main.cpp
sprint1/app_with_mem_leaks/: CMakeLists.txt
sprint1/app_with_mem_leaks/src/: main.cpp
sprint1/app_with_placement_new/: CMakeLists.txt
sprint1/app_with_placement_new/src/: main.cpp
sprint1/mleak/: CMakeLists.txt
sprint1/mleak/src/: main.cpp
sprint1/win/: CMakeLists.txt  draft.cpp
sprint2/: CMakeLists.txt  draft.cpp
sprint2/app_dyn_cfg/: CMakeLists.txt
sprint2/app_dyn_cfg/src/: main.cpp
sprint2/app_shared_ptr/: CMakeLists.txt
sprint2/app_shared_ptr/src/: main.cpp
sprint2/app_sqlite3/: CMakeLists.txt
sprint2/app_sqlite3/src/: main.cpp
